--- a/references.bib
+++ b/references.bib
@@ -1676,3 +1676,37 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2001AJ....121..820G},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2016arXiv161100036D,
+   author = {{DESI Collaboration} and {Aghamousa}, A. and {Aguilar}, J. and 
+	{Ahlen}, S. and {Alam}, S. and {Allen}, L.~E. and {Allende Prieto}, C. and 
+	{Annis}, J. and {Bailey}, S. and {Balland}, C. and et al.},
+    title = "{The DESI Experiment Part I: Science,Targeting, and Survey Design}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1611.00036},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2016,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv161100036D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{2016SPIE.9908E..1MT,
+   author = {{Tamura}, N. and others},
+    title = "{Prime Focus Spectrograph (PFS) for the Subaru telescope: overview, recent progress, and future perspectives}",
+booktitle = {Ground-based and Airborne Instrumentation for Astronomy VI},
+     year = 2016,
+   series = {\procspie},
+   volume = 9908,
+archivePrefix = "arXiv",
+   eprint = {1608.01075},
+ primaryClass = "astro-ph.IM",
+    month = aug,
+      eid = {99081M},
+    pages = {99081M},
+      doi = {10.1117/12.2232103},
+   adsurl = {http://adsabs.harvard.edu/abs/2016SPIE.9908E..1MT},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
