Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -80,6 +80,8 @@ Emmanuel Bertin\inst{8}
 \and
 R\'emi Cabanac \inst{9}
 \and
+F. Courbin \inst{12}
+\and
 Andrew Davies \inst{22}
 \and
 Etienne Decenci\`ere \inst{10}
